<resources>
    <string name="app_name">BLE</string>
    <!-- SplashActivity  -->
    <string name="splash_text">J U X T</string>
    <!-- IntroSliderActivity -->
    <string name="intro_slider1_activity">ACTIVITY</string>
    <string name="intro_slider1_info">Nulla dignissim dapi bus Leo pretium tristique. Maecenas sapien Lorem ipsum dolor
        sit amet, consectetur adipiscing elit. Nunc vel odio turpis. Donec sit amet sodales dui. Nunc vel justo in
        lectus ornare porttitor eu id dui. Ut vel tempus nisi, sed rutrum leo. Ut et laoreet mauris. Praesent sagittis
        purus non elit sollicitudin malesuada. Ut ornare felis nulla, laoreet viverra arcu ornare ut.
    </string>
    <string name="intro_slider1_skip"><![CDATA[SKIP >]]></string>
    <string name="intro_slider2_notification">NOTIFICATIONS</string>
    <string name="intro_slider2_info">Nulla dignissim dapi bus Leo pretium tristique. Maecenas sapien Lorem ipsum dolor
        sit amet, consectetur adipiscing elit. Nunc vel odio turpis. Donec sit amet sodales dui. Nunc vel justo in
        lectus ornare porttitor eu id dui. Ut vel tempus nisi, sed rutrum leo. Ut et laoreet mauris. Praesent sagittis
        purus non elit sollicitudin malesuada. Ut ornare felis nulla, laoreet viverra arcu ornare ut.
    </string>
    <string name="intro_slider2_skip"><![CDATA[SKIP >]]></string>

    <string name="intro_slider3_dualTime">DUAL TIME</string>

    <!-- PhoneNumberVerificationActivity -->
    <string name="otp_text">OTP VERIFICATION</string>
    <string name="phone_num_int">+91 xxxxx xxxxx</string>
    <string name="otp_msg">You will receive a 4 digit OTP number on your mobile phone</string>
    <string name="otp_ack">By entering the mobile number you agree to accept the</string>
    <string name="otp_term_text">TERMS &amp; CONDITIONS</string>
    <string name="otp_incurrect_text">INCORRECT MOBILE NUMBER</string>
    <string name="otp_receive_msg">You will receive a 4 digit OTP number on your mobile phone</string>
    <string name="device_search_msg">Searching for your smart device</string>
    <string name="pairing_success_msg">PAIRING SUCCESSFUL</string>
    <string name="connected_msg">CONNECTED</string>
    <string name="connected_info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed doeiusmod tempor
        incididunt
    </string>
    <!-- PairingActivity -->
    <string name="location_permission_disabled">Location Permission Disabled</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>

    <!-- BLEServices -->
    <string name="service_uuid">F0BA3120-6CAC-4C99-9089-4B0A1DF45002</string>
    <string name="char_uuid">F0BA3121-6CAC-4C99-9089-4B0A1DF45002</string>

    <!-- OTPVerificationActivity -->
    <string name="otp_info">PLS RE-ENTER THE 4 DIGIT OTP RECEIVED ON YOUR MOBILE FOR FOR VERIFICATION</string>
    <string name="otp_resend">RESEND OTP</string>
    <string name="otp_incorrect_msg">INCORRECT OTP</string>


    <!-- PermissionAccessActivity -->
    <string name="permission_text">PERMISSION &amp; ACCESS</string>
    <string name="permission_granted">BY GRANTING ACCESS YOU ALLOW THE WATCH &amp; APP TO ACCESS YOUR PHONE</string>
    <string name="permission_button_text">Accept</string>
    <string name="permission_contact_text">Permission is required to show the contact name on the watch.</string>

    <!-- CalibrateHourHandActivity -->
    <string name="calibarte_text">CALIBRATE HANDS</string>
    <string name="calibrate_info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed doeiusmod tempor
        incididunt
    </string>
    <string name="calibrate_next">NEXT ></string>
    <string name="calibrate_hour_hand">HOUR HAND</string>
    <string name="calibrate_minute_hand">MINUTE HAND</string>

    <!-- SetTimeZoneActivity -->
    <string name="time_zone_text">TIME ZONE</string>
    <string name="current_time_zone">Kolkata 00:00 (GMT +05:30)</string>
    <string name="current_time_zone_info">The watch will show your current location time &amp; weather</string>
    <string name="set_home_time">Would you like to set this as your HOME TIME ?</string>
    <string name="set_home_time_info">you can always modify this in clock heading under menu</string>
    <string name="set_btn">SET</string>
    <string name="next_btn">SKIP ></string>
    <string name="calibration_done_btn">DONE ></string>
    <string name="home_time_text">HOME TIME</string>
    <string name="home_time_set_text">HAS BEEN SET AS YOUR HOME TIME</string>
    <string name="home_time_success">Home time successfully set</string>


    <!-- StepGoalFragment -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="steps">Steps</string>
    <string name="step_info">DAILY STEP GOAL</string>
    <string name="number_picker_formatter">%02d</string>

    <!-- NameFragment -->
    <string name="name_info">NAME</string>

    <!-- GenderFragment -->
    <string name="gender_info">GENDER</string>

    <!-- HeightFragment -->
    <string name="height_info">HEIGHT</string>

    <!-- WeightFragment -->
    <string name="weight_info">WEIGHT</string>

    <!-- BirthDayFragment -->
    <string name="birthday_info">BIRTHDAY</string>

</resources>
