<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:background="@color/colorPrimary">

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="21.3dp"
            android:layout_marginEnd="21.3dp"
            android:layout_marginTop="45dp"
            android:layout_marginBottom="45dp"
            app:layout_constraintDimensionRatio="H,16:8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="#ffffff"
            app:cardCornerRadius="13.3dp"
            app:cardElevation="0dp">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

            <TextView
                    android:text="@string/time_zone_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView1"
                    android:textSize="18sp"
                    android:fontFamily="Roboto-Bold"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="34.4dp"/>

            <TextView
                    android:text="@string/current_time_zone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView2"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/textView1"
                    android:layout_marginTop="34dp"
                    android:textSize="14sp"
                    android:fontFamily="Roboto-Bold"
                    android:textAlignment="center"
                    android:textColor="#c3c3c3"
                    android:textStyle="bold"
            />

            <TextView
                    android:text="@string/current_time_zone_info"
                    android:layout_width="200.7dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView3"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/textView2"
                    android:layout_marginTop="4dp"
                    android:textSize="10sp"
                    android:fontFamily="Roboto-Regular"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textStyle="normal"
            />

            <ImageView
                    android:layout_width="113.7dp"
                    android:layout_height="215.8dp"
                    app:srcCompat="@drawable/juxt_watch"
                    android:id="@+id/imageView1"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/textView3"
                    android:layout_marginTop="22dp"/>


            <TextView
                    android:text="@string/set_home_time"
                    android:layout_width="163dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/imageView1"
                    android:id="@+id/textView4"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="27dp"
                    android:textSize="10sp"
                    android:fontFamily="Roboto-Medium"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textStyle="normal"

            />

            <TextView
                    android:text="@string/set_home_time_info"
                    android:layout_width="175dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textView4"
                    android:id="@+id/textView5"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="4dp"
                    android:textSize="10sp"
                    android:fontFamily="Roboto-Regular"
                    android:textAlignment="center"
                    android:textColor="#c3c3c3"
                    android:textStyle="normal"

            />


            <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textView5"
                    android:layout_marginTop="41dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginStart="24dp">

                <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/set_btn"
                        android:textColor="#000000"
                        android:textStyle="bold"
                        android:textSize="13sp"
                        android:fontFamily="Roboto-Bold"
                        android:clickable="true"/>

                <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/next_btn"
                        android:layout_alignParentRight="true"
                        android:textColor="#000000"
                        android:textStyle="bold"
                        android:fontFamily="Roboto-Bold"
                        android:textSize="13sp"
                        android:clickable="true"/>

            </RelativeLayout>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>

