<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:background="@color/colorPrimary">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/scrollView"
            android:focusable="true">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

            <include layout="@layout/activity_custom_toolbar"
                     android:id="@+id/custom_toolbar"
                     android:layout_height="match_parent"
                     android:layout_width="match_parent"
                     android:layout_marginBottom="40dp"/>

            <androidx.cardview.widget.CardView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="40dp"
                    android:layout_marginStart="21dp"
                    android:layout_marginEnd="21dp"
                    app:cardCornerRadius="13.3dp"
                    app:cardElevation="0dp"
                    android:paddingBottom="30dp">

                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                    <TextView
                            android:id="@+id/textView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/otp_text"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="34dp"
                            android:textStyle="bold"
                            android:textSize="18sp"
                            android:textAlignment="center"
                            android:textColor="#000000"
                    />
                    <EditText
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:inputType="phone"
                            android:ems="10"
                            android:id="@+id/editText"
                            android:layout_centerHorizontal="true"
                            android:layout_below="@id/textView2"
                            android:layout_marginTop="25dp"
                            android:hint="@string/phone_num_int"
                            android:textAlignment="center"
                            android:textSize="18sp"
                            android:fontFamily="Roboto-Bold"
                            android:textColor="#9e9e9e"
                            android:backgroundTint="#6F9E9E9E"
                            android:textCursorDrawable="@color/colorPrimary"
                            android:cursorVisible="false"
                    />

                    <TextView
                            android:id="@+id/textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/otp_incurrect_text"
                            android:layout_centerHorizontal="true"
                            android:textColor="#ff0000"
                            android:layout_below="@id/editText"
                            android:textSize="10sp"
                            android:layout_marginTop="8dp"
                            android:fontFamily="Roboto-Italic"
                            android:visibility="gone"/>

                    <TextView
                            android:id="@+id/textView4"
                            android:text="@string/otp_msg"
                            android:layout_width="246dp"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_below="@id/textView3"
                            android:layout_marginTop="38dp"
                            android:fontFamily="Roboto-Regular"
                            android:textSize="10sp"
                            android:textColor="#000000"
                            android:textAlignment="center"
                            android:textAllCaps="true"
                            android:textStyle="normal"/>

                    <TextView
                            android:id="@+id/textView5"
                            android:text="@string/otp_ack"
                            android:layout_width="158dp"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_below="@id/textView4"
                            android:layout_marginTop="38dp"
                            android:textColor="#bababa"
                            android:textSize="10sp"
                            android:fontFamily="Roboto-Regular"
                            android:textAlignment="center"
                            android:textStyle="normal"/>

                    <TextView
                            android:id="@+id/textView6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/otp_term_text"
                            android:layout_centerHorizontal="true"
                            android:layout_below="@+id/textView5"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="27dp"
                            android:textStyle="normal"
                            android:textColor="#000000"
                            android:fontFamily="Roboto-Regular"
                            android:textSize="10sp"
                    />


                </RelativeLayout>


            </androidx.cardview.widget.CardView>


        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>


